@@ -1,3 +1,9 @@
+2007-02-20  Xan Lopez  <xan.lopez@nokia.com>
+
+	* sapwood-draw.c (draw_option, draw_check):
+	Add special casing for GtkCheckButton and GtkRadioButton to use
+	the correct graphics in the theme when the widgets have focus.
+
 2007-02-06  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* === Release 2.91.2 ===
